# Hackerthon-BCG-Platinum

./: .dockerignore  .env.example  .gitignore  AGENT.MD  Dockerfile  README.md  cloudbuild.yaml  firebase.json  firestore.rules  notes.md  pyproject.toml  requirements.txt
.agents/plugins/: marketplace.json
agent/: Dockerfile  README.md  __init__.py  coach_voice.py  firebase_client.py  main.py  offer_actions.py  patient_updates.py  pillar_analysis.py  requirements.txt  server.py
apps/longevity_compass/: README.md  firebase.json  pubspec.yaml
data/: data_overview.md
data/raw/: ehr_records.csv  lifestyle_survey.csv
docs/: README.md  challenge-summary.md  personas.md
docs/adr/: 0001-local-first-duckdb-foundation.md  0002-patient-facing-mvp-scope.md  0003-persona-portfolio-before-single-persona-selection.md  0004-agent-operating-model-and-subagents.md  0005-documentation-first-operating-model.md  0006-google-first-mvp-architecture.md  0007-longevity-compass-core-experience.md  0008-hybrid-retention-and-monetization-loop.md  README.md  template.md
docs/architecture/: google-first-mvp.md
docs/product/: brief.md  journeys.md  longevity-compass.md  personas.md  recovery-first-new-user-plan.md
scripts/: _app_env.sh  bootstrap_agent_infra.sh  build_warehouse.py  deploy_agent.sh  query_patient.py  run_android.sh  run_api.sh  run_ios.sh  run_web.sh  seed_agent_firestore.py  setup_firebase.sh  sync_firestore.py  sync_firestore.sh  verify_agent.sh
sql/: marts.sql  schema_reference.sql
src/longevity_mvp/: api.py  (+11 more)
tests/: test_offer_copy.py  test_patient_updates.py
(+46 files in other folders)
